# Motor-de-Velos-SCM

./: .coverage  .gitignore  BayesLineFit_mod.py  CHANGELOG.md  CITATION.cff  DATOS_SINTETICOS.md  KILL_TESTS_GUIDE.md  KILL_TESTS_RESULTS.md  LICENSE  README.md  RESULTADOS_PARA_REVISOR.txt  USAGE.md  coverage.xml  create_realistic_test_data.py  df_master_realistic.csv  framework_version.json  pyproject.toml  requirements.txt  run_all.ps1  run_f3_pipeline.sh  scm_env_protocol.py  scm_kill_tests.py  scm_robustness_tests.py  scm_sparc_full_analysis.py  setup.cfg  verify_data_quality.py
config/: defaults.yaml
data/: GXY_D13.8_V144_SCM_01.csv  README.md  SPARC_Lelli2016_Master.txt  big_sparc_catalog.csv  little_things_global.csv  m82_rotcurve.txt  sparc_175_master_sample.csv  sparc_rar_sample.csv
docs/: DATA_CONTRACT_SPARC.md  DEEP_REGIME_TEST.md  F3_COMBINED_CATALOG.md  F3_OBSERVABLE.md  FRAMEWORK_MASTER_CATALOG.md  HISTORICAL_NOTE_MOTOR_DE_VELOS.md  METHODOLOGY.md  METHODS.md  PIPELINE_DESCRIPTION.md  definitions.md  environmental_extension.md  figures.md  hinge_friction_vs_sfr_methodology.md  paper_section_hinge_sfr.tex  results_interpretation.md  theory_jeans_connection.md
notebooks/: SPARC_validation.ipynb  analysis_output.ipynb
paper/: .gitignore  manuscript.tex  references.bib
reports/: M82_v0.6.1_summary.json  batch_results_m81_group.csv  integrity_report_v0.6.1.json  m81_group_summary.json
results/: F3_values.csv  deep_slope_test.csv  executive_summary.txt  f3_catalog.csv  f3_catalog_real.csv  f3_catalog_real_stats.csv  f3_catalog_stats.csv  rar_bins.csv  (+11 more)
(+327 files in other folders)
